<resources>
    <string name="app_name">FIXA</string>
    <string name="onboarding_tracking_title">Acompanhe cada etapa</string>
    <string name="onboarding_tracking_body">Veja o andamento das manutenções e saiba o que está acontecendo em tempo real.</string>
    <string name="onboarding_organize_title">Organize seus chamados</string>
    <string name="onboarding_organize_body">Registre problemas, acompanhe solicitações e mantenha tudo sob controle.</string>
    <string name="onboarding_schedule_title">Agende com facilidade</string>
    <string name="onboarding_schedule_body">Marque manutenções, escolha datas e organize seus atendimentos sem complicação.</string>
    <string name="onboarding_back">Voltar</string>
    <string name="onboarding_skip">Pular</string>
    <string name="onboarding_next">Próximo</string>
    <string name="onboarding_start">Começar</string>
    <string name="login_title">Login</string>
    <string name="login_email_label">E-mail</string>
    <string name="login_email_hint">exemplo@gmail.com</string>
    <string name="login_password_label">Senha</string>
    <string name="login_password_hint">••••••••••••</string>
    <string name="login_forgot_password">Esqueceu a senha?</string>
    <string name="login_enter">Entrar</string>
    <string name="login_no_account">Não tem conta?</string>
    <string name="login_register">Cadastre-se</string>
    <string name="login_social_title">Ou entre com</string>
    <string name="login_google">Entrar com Google</string>
    <string name="login_facebook">Entrar com Facebook</string>
    <string name="login_apple">Entrar com Apple</string>
    <string name="login_toggle_password">Mostrar ou ocultar senha</string>
    <string name="register_title">Cadastrar</string>
    <string name="register_intro">Para começar selecione sua instituição e unidade</string>
    <string name="register_institution_label">Instituição</string>
    <string name="register_institution_hint">Selecione sua instituição</string>
    <string name="register_unit_label">Unidade</string>
    <string name="register_unit_hint">Selecione a unidade</string>
    <string name="register_continue">Continuar</string>
    <string name="register_full_name_label">Nome completo</string>
    <string name="register_full_name_hint">João Silva</string>
    <string name="register_birth_date_label">Data de nascimento</string>
    <string name="register_birth_date_hint">01/01/2000</string>
    <string name="register_email_label">E-mail</string>
    <string name="register_email_hint">exemplo@gmail.com</string>
    <string name="register_phone_label">Telefone</string>
    <string name="register_phone_hint">+55 (11) 98578-9574</string>
    <string name="register_password_label">Senha</string>
    <string name="register_confirm_password_label">Confirmar senha</string>
    <string name="register_create">Criar</string>
    <string name="register_existing_account">Já possui uma conta?</string>
    <string name="register_login">Login</string>
    <string name="register_open_calendar">Selecionar data de nascimento</string>
    <string-array name="register_test_institutions">
        <item>Instituto Federal de Educação</item>
        <item>Universidade Municipal</item>
        <item>Centro Técnico FIXA</item>
    </string-array>
    <string-array name="register_test_units">
        <item>Unidade Centro</item>
        <item>Unidade Norte</item>
        <item>Unidade Sul</item>
    </string-array>
</resources>
